test/corpus/source_line.txt
===
label: instuction operands comment
===
label:	mov	rax, 60 ; sys_EXIT

---
(source_file
  (source_line
    (label
      (word))
    (instruction
      (known_instruction)
      (operands
        (operand
          (register))
        (operand
          (constant
            (constant_numeric)))))))

===
label instuction operand
===
label	add	rax, rbx

---
(source_file
  (source_line
    (label
      (word))
    (instruction
      (known_instruction)
      (operands
        (operand
          (register))
        (operand
          (register))))))

===
instuction operand
===
	inc	rax

---
(source_file
  (source_line
    (instruction
      (known_instruction)
      (operands
        (operand
          (register))))))

===
instuction
===
	syscall

---
(source_file
  (source_line
    (instruction
      (known_instruction))))

===
label:
===
label:

---
(source_file
  (source_line
    (label
      (word))))

===
prefix instruction
===
repne	scasb

---
(source_file
  (source_line
    (instruction
      (instruction_prefix)
      (known_instruction))))

===
line \ continuation
===
label:	mov	rax, \
		60

---
(source_file
  (source_line
    (label
      (word))
    (instruction
      (known_instruction)
      (operands
        (operand
          (register))
        (operand
          (constant
            (constant_numeric)))))))

===
label unknown operands
===
exit:	sys_exit	rax

---
(source_file
  (source_line
    (label
      (word))
    (instruction
      (unknown_instruction
        (word))
      (operands
        (operand
          (register))))))

===
unknown operands
===
	sys_write	2, buf, BUFSIZE

---
(source_file
  (source_line
    (instruction
      (unknown_instruction
        (word))
      (operands
        (operand
          (constant
            (constant_numeric)))
        (operand
          (expression
            (word)))
        (operand
          (expression
            (word)))))))

===
coucou // XXX: could be any of: label, macro, unknown_instruction
===
coucou

---
(source_file
  (source_line
    (label
      (word))))

===
comment
===
; comment

---
(source_file
  (comment))

===
com \ ment
===
; com \
  ment

---
(source_file
  (comment))
